--- a/src/components/FeaturesGrid.css
+++ b/src/components/FeaturesGrid.css
@@ -187,6 +187,14 @@
   z-index: 2;
 }
 
+.features-display-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+  margin: 2rem 0;
+}
+
 .features-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
